# blackmagic-c2

./: Cargo.toml  Dockerfile-dev  Makefile  README.md  buildspec.yml  docker-compose.yml  main
src/: common.rs  main.rs
src/agent/: decklink_watcher.rs  hub_connection.rs  hyperdeck.rs  mod.rs  network_scanner.rs  shell.rs
src/hub/: agent_connection.rs  graphql.rs  mod.rs  shell_connection.rs
src/hub/ui/: .gitignore  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
src/hub/ui/src/: graphiql.d.ts  graphql-schema.json  index.html  index.tsx
src/hub/ui/src/components/: Agents.tsx  App.tsx  GraphiQL.tsx
src/hub/ui/src/components/Agent/: Overview.tsx  Shell.tsx  index.tsx
